# security-scanner

./: README.md  pyproject.toml
src/repo_security_scanner/: __init__.py  cli.py  models.py  version_utils.py
src/repo_security_scanner/parsers/: __init__.py  base.py  docker.py  go.py  java.py  node.py  php.py  python.py  ruby.py  rust.py
src/repo_security_scanner/vulndb/: __init__.py  base.py  docker_images.py  github_advisory.py  github_issues.py  hackernews.py  osv.py  registry_health.py  security_releases.py
tests/: test_docker.py  test_osv.py
