[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-scanner"
version = "0.3.1"
description = "Scan local repositories for dependency security vulnerabilities across 7 ecosystems with early warning intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "security-scanner contributors"},
]
keywords = [
    "security", "vulnerability", "scanner", "dependencies",
    "cve", "osv", "npm", "pypi", "maven", "supply-chain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/yashbarot/security-scanner"
Repository = "https://github.com/yashbarot/security-scanner"
Issues = "https://github.com/yashbarot/security-scanner/issues"

[project.scripts]
repo-scan = "repo_security_scanner.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
